# Guneodros

./: .gitignore  CMakeLists.txt  Component.hpp  Entity.hpp  EntityManager.hpp  LICENSE  Movement.hpp  README.md  SystemManager.hpp  Systems.hpp  main.cpp  xmake.lua
Components/: Component.hpp
Core/: AABB.hpp  Entity.hpp  EntityManager.hpp  InputManager.hpp  Logger.hpp  SystemManager.hpp  TextureManager.hpp  WindowManager.hpp
Systems/: Movement.hpp  PhysicsSystem.hpp  Render.hpp  SpriteRenderer.hpp  SystemManager.hpp  Systems.hpp
Utils/: types.hpp
